[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[project]
name = "dnnf"
authors = [{ name = "David Shriver", email = "dls2fc@virginia.edu" }]
readme = "README.rst"
license = { file = "LICENSE" }
classifiers = ["License :: OSI Approved :: MIT License"]
requires-python = ">=3.7"
dynamic = ["version", 'description']
keywords = ["DNN", "neural network", "falsification"]
dependencies = [
    "dnnv~=0.4",
    "numpy>=1.16",
    "onnx>=1.7",
    "scipy>=1.5",
    "torch>=1.6",
    "torchvision>=0.7",
    "tensorflow<2.0",
]

[project.optional-dependencies]
cleverhans = ["cleverhans==3.0.1"]
foolbox = ["foolbox~=3.3"]
dev = ["black", "mypy"]
doc = ["sphinx==2.4"]
test = ["coverage"]

[project.urls]
Documentation = "https://dnnf.readthedocs.io/en/latest/"
Source = "https://github.com/dlshriver/DNNF"

[project.scripts]
dnnf = "dnnf.__main__:_main"

[tool.coverage.run]
branch = true
concurrency = ["multiprocessing", "thread"]
parallel = true
source = ["dnnf"]
